@@ -172,6 +172,7 @@ struct NautilusFileDetails
 	eel_boolean_bit got_custom_display_name       : 1;
 
 	eel_boolean_bit thumbnail_is_up_to_date       : 1;
+	eel_boolean_bit thumbnail_tried_original      : 1;
 	
 	eel_boolean_bit is_thumbnailing               : 1;
 
