@@ -1,5 +1,13 @@
 2007-10-12  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-directory-async.c:
+        * libnautilus-private/nautilus-file-private.h:
+        * libnautilus-private/nautilus-file.c:
+	For large icons, try to use the original file
+	when thumbnailing.
+
+2007-10-12  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file.c:
 	Only invalidate thumbnails when sizing up, not
 	on the original scale from raw
